--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,21 @@ services:
   chembl-virtuoso:
     image: openlink/virtuoso-opensource-7:7.2.11
     restart: always
-    container_name: chembl-virtuoso
+    container_name: VIRTUOSO_CONTAINER_NAME
     volumes:
       - VIRTUOSO_DB_PERSISTENT_DIR:/database # directory to persist the Virtuoso database. If empty dir, a new database will be created
     environment:
       - DBA_PASSWORD=CONDUCTOR_PASSWORD
       - SPARQL_UPDATE=false
     ports:
-      - "8899:8890"
-      - "1133:1111"
+      - "8890:8890"
+      - "1111:1111"
   snorql:
     image: aammar/snorql-httpd:latest
     restart: always
-    container_name: snorql
-    #volumes:
-    #  - SNORQL_WEB_FILES_DIR:/usr/local/apache2/htdocs # To customize the snorql interface, clone the GitHub repo and use its directory as SNORQL_WEB_FILES_DIR
+    container_name: SNORQL_CONTAINER_NAME
+    volumes:
+      - SNORQL_WEB_FILES_DIR:/usr/local/apache2/htdocs # To customize the snorql interface, clone the GitHub repo and use its directory as SNORQL_WEB_FILES_DIR
     environment:
       - SNORQL_ENDPOINT=ENDPOINT_URL
       - SNORQL_EXAMPLES_REPO=EXAMPLES_REPO_URL
@@ -26,4 +26,4 @@ services:
       - DEFAULT_GRAPH=ENDPOINT_DEFAULT_GRAPH_URL
     ports:
       - "8088:80"
-      - "4430:443"
+      - "443:443"
